fix low z-index messing with some websites, see #2

--- a/content_scripts/signit.css
+++ b/content_scripts/signit.css
@@ -58,6 +58,8 @@
 
 
 /*  */
+.signit-popup { z-index: 9999; }  /* above everythings */
+
 .signit-popup .oo-ui-popupWidget-popup {
 	max-height: 500px;
 }
